# Agentic_Streamlit_Project

./: pyproject.toml
src/agentic/: __init__.py  main.py  script.py
