[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MUHAMMAD ABDULLAH ABID", email = "muabdullahabid@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.42.2",
]

[project.scripts]
agentic = "agentic:main"
streamlit_app = "agentic.script:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
